--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,8 @@
-apturl==0.5.2
-asn1crypto==0.24.0
-bcrypt==3.1.4
-beautifulsoup4==4.6.0
-Brlapi==0.6.6
-certifi==2018.4.16
-cffi==1.11.5
-chardet==3.0.4
 click==6.7
-command-not-found==0.3
-cryptography==2.2.2
-cupshelpers==1.0
-decorator==4.1.2
-defer==1.0.6
-distro-info==0.18
-eyeD3==0.8.5
-Flask==0.12.2
-httpie==0.9.8
-httplib2==0.9.2
-idna==2.6
-ipython==5.5.0
-ipython-genutils==0.2.0
-isort==4.3.4
+Flask==1.0.1
+Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
-jdate==0.0.3
 Jinja2==2.10
-kazam==1.4.5
-keyring==10.6.0
-keyrings.alt==3.0
-Khayyam==3.0.17
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-logzero==1.5.0
-louis==3.5.0
-lyricwikia==0.1.9
-macaroonbakery==1.1.3
-Mako==1.0.7
 MarkupSafe==1.0
-mutagen==1.40.0
-oauth==1.0.1
-olefile==0.45.1
-pafy==0.5.4
-paramiko==2.4.1
-pathlib==1.0.1
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==5.1.0
-prompt-toolkit==1.0.15
-protobuf==3.0.0
-pyasn1==0.4.2
-pycairo==1.16.2
-pycparser==2.18
-pycrypto==2.6.1
-pycups==1.9.73
-Pygments==2.2.0
-pygobject==3.26.1
-pymacaroons==0.13.0
-PyNaCl==1.2.1
-pyRFC3339==1.0
-python-apt==1.6.0
-python-debian==0.1.32
-python-magic==0.4.15
-pytz==2018.3
-pyxattr==0.6.0
-pyxdg==0.25
-PyYAML==3.12
-reportlab==3.4.0
-requests==2.18.4
-requests-unixsocket==0.1.5
-SecretStorage==2.3.1
-simplegeneric==0.8.1
-simplejson==3.13.2
-six==1.11.0
-spotify-downloader==0.4.2
-spotipy==2.4.4
-stormssh==0.6.9
-system-service==0.3
-systemd-python==234
-termcolor==1.1.0
-titlecase==0.12.0
-traitlets==4.3.2
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
-unicode-slugify==0.1.3
-Unidecode==1.0.22
-urllib3==1.22
-usb-creator==0.3.3
-vboxapi==1.0
-virtualenv==15.2.0
-virtualenv-clone==0.3.0
-wadllib==1.3.2
-wcwidth==0.1.7
+SQLAlchemy==1.2.7
 Werkzeug==0.14.1
-xkit==0.0.0
-youtube-dl==2018.4.16
-zope.interface==4.3.2
